Pages templates boilerplates

--- a/project/src/views/default/index.twig
+++ b/project/src/views/default/index.twig
@@ -1,5 +1,9 @@
 {% extends layout %}
 
+{% block style %}
+    <link href="/assets/css/profile.css" rel="stylesheet">
+{% endblock %}
+
 {% block content %}
 
     <section>
