--- a/project/src/views/default/index.twig
+++ b/project/src/views/default/index.twig
@@ -1,7 +1,7 @@
 {% extends layout %}
 
 {% block style %}
-    <link href="/assets/css/profile.css" rel="stylesheet">
+    <link href="/assets/css/userinfo.css" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
