--- a/project/src/web/assets/css/style.css
+++ b/project/src/web/assets/css/style.css
@@ -1,10 +1,16 @@
 /*
  * Globals
  */
+html {
+    height: 100%;
+}
 
 body {
     font-family: Georgia, "Times New Roman", Times, serif;
     color: #555;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
 }
 
 h1, .h1,
