--- a/project/src/views/default/userinfo.twig
+++ b/project/src/views/default/userinfo.twig
@@ -1,8 +1,8 @@
 <div class="col-sm-2">
     <div class="userinfo">
-        <div class="userpic alert-info">EU</div>
-        <h3 class="username">Evgenii Utkin</h3>
-        <h5 class="userlocation">Russia, St. Petersburg, Varshavskaya 19/2</h5>
+        <div class="userpic alert-info">{{ user.sign }}</div>
+        <h3 class="username">{{ user.name }}</h3>
+        <h5 class="userlocation">{{ user.location }}</h5>
         <ul class="nav nav-pills nav-stacked">
             <li role="presentation"><a class="edit-profile" href="#">Edit personal information</a></li>
             <li role="presentation"><a href="/auth/logout">Logout</a></li>
