--- a/project/src/views/default/index.twig
+++ b/project/src/views/default/index.twig
@@ -12,7 +12,7 @@
             {% include "default/userinfo.twig" %}
 
             <div class="col-sm-10">
-                {% include "default/search.twig" %}
+                {#{% include "default/search.twig" %}#}
                 {% include "default/friendlist.twig" %}
                 {% include "default/container.twig" %}
             </div>
