--- a/project/src/views/default/index.twig
+++ b/project/src/views/default/index.twig
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-    <section>
+    <section id="main-block" data-id="{{ user.id }}">
         <div class="row">
 
             {% include "default/userinfo.twig" %}
