--- a/project/src/views/default/userinfo.twig
+++ b/project/src/views/default/userinfo.twig
@@ -1,6 +1,6 @@
 <div class="col-sm-2">
     <div class="userinfo">
-        <div class="userpic alert-info">{{ user.sign }}</div>
+        <a class="ava" href="/"><div class="userpic alert-info">{{ user.sign }}</div></a>
         <h3 class="username">{{ user.name }}</h3>
         <h5 class="userlocation">{{ user.location }}</h5>
         <ul class="nav nav-pills nav-stacked">
