--- a/project/src/web/assets/css/userinfo.css
+++ b/project/src/web/assets/css/userinfo.css
@@ -152,6 +152,10 @@
     padding: 35px;
 }
 
+.userinfo a.ava:hover {
+    text-decoration: none;
+}
+
 .userinfo .username {
     margin: 10px 0;
 }
@@ -221,4 +225,7 @@
 }
 .blog-sidebar {
     padding-top: 20px;
+}
+.info .btn-group {
+    padding-top: 10px;
 }
