--- a/project/src/views/default/friendlist.twig
+++ b/project/src/views/default/friendlist.twig
@@ -22,7 +22,7 @@
                     </div>
                     <div class="col-md-9 col-xs-12">
                         <h4 class="list-group-item-heading">{{ friend.name }}</h4>
-                        <p class="list-group-item-text">{{ friend.location }}</p>
+                        <p class="list-group-item-text">{{ friend.locationName }}</p>
                     </div>
                 </div>
             </a>
