Google map implement

--- a/project/src/views/layout/main.twig
+++ b/project/src/views/layout/main.twig
@@ -29,6 +29,8 @@
 
 {% block content %}
 {% endblock %}
-<script data-main="assets/js/app" src="/assets/vendor/requirejs/require.js"></script>
+<script data-main="/assets/js/app" src="/assets/vendor/requirejs/require.js"></script>
+{% block js %}
+{% endblock %}
 </body>
 </html>
