--- a/project/src/views/auth/login.twig
+++ b/project/src/views/auth/login.twig
@@ -10,9 +10,18 @@
         <form class="form-signin" action="/auth/login" method="post">
             <span class="logo glyphicon glyphicon-lock" aria-hidden="true"></span>
             <h2 class="form-signin-heading">FriendLock</h2>
+            {% if notice %}
+                <div class="alert alert-info">
+                    <ul style="padding-left: 10px">
+                        {% for error in notice %}
+                            <li>{{ error }}</li>
+                        {% endfor %}
+                    </ul>
+                </div>
+            {% endif %}
             {% if errors %}
                 <div class="alert alert-danger">
-                    <ul>
+                    <ul style="padding-left: 10px;">
                         {% for error in errors %}
                             <li>{{ error }}</li>
                         {% endfor %}
