--- a/project/src/views/default/userinfo.twig
+++ b/project/src/views/default/userinfo.twig
@@ -2,7 +2,7 @@
     <div class="userinfo">
         <a class="ava" href="/"><div class="userpic alert-info">{{ user.sign }}</div></a>
         <h3 class="username">{{ user.name }}</h3>
-        <h5 class="userlocation">{{ user.location }}</h5>
+        <h5 class="userlocation">{{ user.locationName }}</h5>
         <ul class="nav nav-pills nav-stacked">
             <li role="presentation"><a class="edit-profile" href="#">Edit personal information</a></li>
             <li role="presentation"><a href="/auth/logout">Logout</a></li>
