--- a/project/src/views/default/index.twig
+++ b/project/src/views/default/index.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block js %}
-    {#<script type="text/javascript" src="//www.google.com/jsapi"></script>#}
+    <script type="text/javascript" src="//www.google.com/jsapi"></script>
 {% endblock %}
 
 {% block content %}
