--- a/project/src/web/assets/templates/friend.twig
+++ b/project/src/web/assets/templates/friend.twig
@@ -21,6 +21,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-xs-12 map"></div>
+        <div class="col-xs-12 map">
+        </div>
     </div>
 </div>
