--- a/project/src/views/default/userinfo.twig
+++ b/project/src/views/default/userinfo.twig
@@ -4,7 +4,7 @@
         <h3 class="username">{{ user.name }}</h3>
         <h5 class="userlocation">{{ user.locationName }}</h5>
         <ul class="nav nav-pills nav-stacked">
-            <li role="presentation"><a class="edit-profile" href="#">Edit personal information</a></li>
+            <li role="presentation"><a class="edit-profile" href="/#/default/update">Edit personal information</a></li>
             <li role="presentation"><a href="/auth/logout">Logout</a></li>
         </ul>
     </div>
