--- a/project/src/views/email/success.twig
+++ b/project/src/views/email/success.twig
@@ -1,5 +1,4 @@
-Dear {{ name }}, welcome to out site. Here you can:\n
-\n
+Dear {{ name }}, welcome to out website. Here you can:
+
 - find your friend and know where there are
-\n
 - see directions to your friend
