--- a/project/src/views/email/confirmation.twig
+++ b/project/src/views/email/confirmation.twig
@@ -1,5 +1,5 @@
-Dear {{ name }}, to complete registration proccess please visit this link:\n
-{{ link }}.\n
-\n
-Your login: {{ email }}\n
+Dear {{ name }}, to complete registration proccess please visit this link:
+{{ link }}
+
+Your login: {{ email }}
 Your password: {{ passwd }}
