--- a/project/src/web/assets/css/style.css
+++ b/project/src/web/assets/css/style.css
@@ -8,7 +8,7 @@ html {
 body {
     font-family: Georgia, "Times New Roman", Times, serif;
     color: #555;
-    overflow: hidden;
+    overflow: visible;
     width: 100%;
     height: 100%;
 }
