--- a/project/src/web/assets/css/userinfo.css
+++ b/project/src/web/assets/css/userinfo.css
@@ -207,8 +207,8 @@
     color: #aaa;
 }
 
-.blog-main .info {
-    padding-top: 10px;
+.blog-main {
+    padding-top: 20px;
 }
 
 .blog-main .info .userpic {
@@ -239,7 +239,22 @@
 #updatePersonal .form-control {
     margin: 5px 0;
 }
-
+.user-small {
+    min-height: 211px;
+}
+.user-small .userpicsmallpic{
+    font-size: 1.5em;
+    padding: 18px;
+    width: 75px;
+    height: 75px;
+}
+.user-small h4 {
+    margin-bottom: 0;
+}
+.user-small .panel-footer,.user-small h4
+{
+    text-align: center;
+}
 @media (min-width: 768px) {
     body {
         overflow: hidden;
