--- a/project/src/web/assets/templates/userProfile.twig
+++ b/project/src/web/assets/templates/userProfile.twig
@@ -10,13 +10,14 @@
     </div>
     <div class="row">
         <div class="col-lg-10 col-lg-offset-2 col-md-offset-3 col-md-9 col-xs-12">
-            <div class="btn-group">
+            <div>
                 {% if isFriend == false %}
                     <button class="btn btn-success" data-id="{{ id }}" id="addToFriends">Add to friends</button>
                 {% elseif isFriend == true %}
                     <button class="btn btn-danger" data-id="{{ id }}" id="removeFromFriends">Remove from friends
                     </button>
                 {% endif %}
+                <button class="btn btn-primary" data-id="{{ id }}" id="getDirections">Get directions</button>
             </div>
         </div>
     </div>
